implementation of CustomRAG class

--- a/nb_experiments.ipynb
+++ b/nb_experiments.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b0accd0d-fb0b-4c5e-be02-8063d3b6a2c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "import os \n",
@@ -14,11 +25,9 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm.auto import tqdm\n",
-    "from rag_fine_tuning import create_vector_store, convert_context_to_langchain_docs\n",
-    "from rag_fine_tuning import query_vector_store, save_llm_answers, fine_tune_rag\n",
+    "from rag_fine_tuning import convert_knowledge_base_to_langchain_docs, fine_tune_rag\n",
     "from data_utils import convert_json_to_dataframe, create_json_subset, collect_all_results, merge_results\n",
     "sns.set_style(\"whitegrid\")\n",
-    "from langchain.embeddings import HuggingFaceEmbeddings\n",
     "from langchain_openai import OpenAIEmbeddings\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "953814b1",
    "metadata": {},
    "outputs": [],
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5771778e-ae9e-49b4-9216-658bdefc8db8",
    "metadata": {},
    "outputs": [],
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "81f2eebd-70b9-4118-b691-0c6c96e72a95",
    "metadata": {},
    "outputs": [],
@@ -189,15 +198,25 @@
    "source": [
     "df = pd.read_csv(\"dataset.csv\")\n",
     "\n",
-    "langchain_docs = convert_context_to_langchain_docs(df)"
+    "langchain_docs = convert_knowledge_base_to_langchain_docs(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "46d8e92a-9322-4359-b18b-f4217fb78003",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1204\n",
+      "page_content='The Normans (Norman: Nourmands; French: Normands; Latin: Normanni) were the people who in the 10th and 11th centuries gave their name to Normandy, a region in France. They were descended from Norse (\"Norman\" comes from \"Norseman\") raiders and pirates from Denmark, Iceland and Norway who, under their leader Rollo, agreed to swear fealty to King Charles III of West Francia. Through generations of assimilation and mixing with the native Frankish and Roman-Gaulish populations, their descendants would gradually merge with the Carolingian-based cultures of West Francia. The distinct cultural and ethnic identity of the Normans emerged initially in the first half of the 10th century, and it continued to evolve over the succeeding centuries.' metadata={'title': 'Normans'}\n",
+      "page_content='The Norman dynasty had a major political, cultural and military impact on medieval Europe and even the Near East. The Normans were famed for their martial spirit and eventually for their Christian piety, becoming exponents of the Catholic orthodoxy into which they assimilated. They adopted the Gallo-Romance language of the Frankish land they settled, their dialect becoming known as Norman, Normaund or Norman French, an important literary language. The Duchy of Normandy, which they formed by treaty with the French crown, was a great fief of medieval France, and under Richard I of Normandy was forged into a cohesive and formidable principality in feudal tenure. The Normans are noted both for their culture, such as their unique Romanesque architecture and musical traditions, and for their significant military accomplishments and innovations. Norman adventurers founded the Kingdom of Sicily under Roger II after conquering southern Italy on the Saracens and Byzantines, and an expedition on behalf of their duke, William the Conqueror, led to the Norman conquest of England at the Battle of Hastings in 1066. Norman cultural and military influence spread from these new European centres to the Crusader states of the Near East, where their prince Bohemond I founded the Principality of Antioch in the Levant, to Scotland and Wales in Great Britain, to Ireland, and to the coasts of north Africa and the Canary Islands.' metadata={'title': 'Normans'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(langchain_docs))\n",
     "print(langchain_docs[0])\n",
@@ -214,25 +233,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6e9878b4",
+   "execution_count": 4,
+   "id": "de25a07e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(\"CustomRAG config: {'chunk_size': 400, 'chunk_overlap': 15, \"\n",
+      " \"'vector_database': 'chromadb', 'embeddings_function': {'model_name': \"\n",
+      " \"'text-embedding-3-large', 'platform': 'OpenAI'}, 'llm': {'model_name': \"\n",
+      " \"'gpt-3.5-turbo', 'client': 'OpenAI'}}\")\n"
+     ]
+    }
+   ],
    "source": [
-    "embeddings_model = \"text-embedding-3-small\"\n",
-    "embeddings = OpenAIEmbeddings(model=embeddings_model)\n",
+    "from rag_fine_tuning import CustomRAG, prompt_message, convert_knowledge_base_to_langchain_docs\n",
     "\n",
-    "db_dir = os.path.join(os.getcwd(), \"vector_databases\")\n"
+    "parameters_dict = {\n",
+    "    \"chunk_size\": 400,\n",
+    "    \"chunk_overlap\": 15,\n",
+    "    \"vector_database\": \"chromadb\",\n",
+    "    \"embeddings_function\": {\n",
+    "        \"model_name\": \"text-embedding-3-large\",    \n",
+    "        \"platform\": \"OpenAI\"\n",
+    "        }, \n",
+    "    \"llm\": {\n",
+    "        \"model_name\": \"gpt-3.5-turbo\",\n",
+    "        \"client\": \"OpenAI\"\n",
+    "        }\n",
+    "}\n",
+    "\n",
+    "df_to_test = df[0:2]\n",
+    "\n",
+    "rag = CustomRAG(knowledge_base=langchain_docs, \n",
+    "                prompt_message=prompt_message,\n",
+    "                config=parameters_dict, \n",
+    "                results_folder='/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/eval_results/test_new_class', \n",
+    "                vector_db_folder='/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/vector_databases/test_new_class')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c7086c9d-a7e4-4f99-86d7-d6803c3a7ec9",
+   "execution_count": 5,
+   "id": "6d08f77e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_vector_store(langchain_docs, embeddings, store_name=\"test_vector_store\", db_dir=db_dir, chunk_size=200, chunk_overlap=15)"
+    "rag.initialize_embeddings_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6e9878b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector store 400_text-embedding-3-large already exists. No need to initialize.\n"
+     ]
+    }
+   ],
+   "source": [
+    "embeddings_model = \"text-embedding-3-small\"\n",
+    "embeddings = OpenAIEmbeddings(model=embeddings_model)\n",
+    "\n",
+    "db_dir = os.path.join(os.getcwd(), \"vector_databases\")\n",
+    "\n",
+    "rag.create_vector_database()"
    ]
   },
   {
@@ -245,28 +317,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "20c5fcd1-6677-4a48-823c-7b899bfee9fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying chroma vector store\n",
+      "How is the weather today in Milan?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/rag_fine_tuning.py:263: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
+      "  db = Chroma(\n",
+      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "query = \"How is the weather today in Milan?\"\n",
-    "store_name =  \"test_vector_store\"\n",
-    "relevant_docs = query_vector_store(store_name, query, embeddings, db_dir, k=3, score_threshold=0.1)\n",
+    "relevant_docs = rag.query_vector_store(query, n_results=3, score_threshold=0.1)\n",
     "\n",
     "print(relevant_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d473dd71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying chroma vector store\n",
+      "Who were the normans?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "query = \"Who were the normans?\"\n",
-    "store_name =  \"test_vector_store\"\n",
-    "relevant_docs = query_vector_store(store_name, query, embeddings, db_dir, k=3, score_threshold=0.1)\n",
+    "relevant_docs = rag.query_vector_store(query, n_results=3, score_threshold=0.1)\n",
     "\n",
     "print(len(relevant_docs))\n",
     "\n",
@@ -284,26 +402,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "bb0a1187",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_to_test = pd.read_csv(\"dataset.csv\")\n",
-    "df_to_test = df_to_test[0:500]"
+    "df_to_test = df_to_test[0:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ff098d54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector store 400_text-embedding-3-large already exists. No need to initialize.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying chroma vector store\n",
+      "In what country is Normandy located?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** Context: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 1/5 [00:02<00:08,  2.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying chroma vector store\n",
+      "When were the Normans in Normandy?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** Context: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|████      | 2/5 [00:03<00:04,  1.57s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying chroma vector store\n",
+      "From which countries did the Norse originate?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** Context: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 3/5 [00:05<00:04,  2.07s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying chroma vector store\n",
+      "Who was the Norse leader?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** Context: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|████████  | 4/5 [00:07<00:01,  1.80s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying chroma vector store\n",
+      "What century did the Normans first gain their separate identity?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** Context: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:08<00:00,  1.71s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "embeddings_model = \"text-embedding-3-small\"\n",
-    "embeddings = OpenAIEmbeddings(model=embeddings_model)\n",
     "\n",
-    "save_llm_answers(df_to_test, langchain_docs, embeddings, embeddings_model, chunk_size=150, filename=\"test_predictions.json\")"
+    "rag.get_llm_multiple_questions_answers(df_to_test)"
    ]
   },
   {
@@ -355,14 +631,17 @@
     "df = pd.read_csv(\"dataset.csv\")\n",
     "df_to_test = df[0:500]\n",
     "\n",
-    "langchain_docs = convert_context_to_langchain_docs(df)\n",
+    "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
     "\n",
-    "fine_tune_rag(df_to_test, langchain_docs)"
+    "fine_tune_rag(df_to_test, \n",
+    "              langchain_docs, \n",
+    "              results_fodler=\"eval_results/test_new_class\", \n",
+    "              vector_db_folder=\"vector_databases/test_new_class\",)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d407aed2",
    "metadata": {},
    "outputs": [],
@@ -426,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e460bb44",
    "metadata": {},
    "outputs": [],
@@ -437,22 +716,20 @@
     "    \"embed_options\": { \n",
     "        \"text-embedding-3-large\": \"OpenAI\", \n",
     "        },\n",
-    "    \"models\": [\"gpt-3.5-turbo\"]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f033e29f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \"models\": {\"gpt-3.5-turbo\": \"openai\"}\n",
+    "}\n",
     "results_folder = os.path.join(os.getcwd(), \"eval_results/debugging_eval_results\")\n",
     "results_folder\n",
     "\n",
     "if not os.path.exists(results_folder):\n",
-    "    os.mkdir(results_folder)"
+    "    os.mkdir(results_folder)\n",
+    "\n",
+    "df = pd.read_csv(\"dataset.csv\")\n",
+    "df_to_test = df[0:500]\n",
+    "\n",
+    "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
+    "\n",
+    "fine_tune_rag(df_to_test, langchain_docs, parameters_dict, results_folder=results_folder, save_context=True)"
    ]
   },
   {
@@ -461,14 +738,7 @@
    "id": "979903fa",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"dataset.csv\")\n",
-    "df_to_test = df[0:500]\n",
-    "\n",
-    "langchain_docs = convert_context_to_langchain_docs(df)\n",
-    "\n",
-    "fine_tune_rag(df_to_test, langchain_docs, parameters_dict, results_folder=results_folder, save_context=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -540,6 +810,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44cef210",
+   "metadata": {},
+   "source": [
+    "# Evaluate with other LLMS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e53f063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run the RAG with best parameters, and save also the context\n",
+    "parameters_dict = {\n",
+    "    \"chunk_sizes\": [400],\n",
+    "    \"embed_options\": { \n",
+    "        \"text-embedding-3-large\": \"OpenAI\", \n",
+    "        },\n",
+    "    \"models\": {\"mistral-large-latest\": \"mistral\"}\n",
+    "}\n",
+    "results_folder = os.path.join(os.getcwd(), \"eval_results/optimize_results\")\n",
+    "results_folder\n",
+    "\n",
+    "if not os.path.exists(results_folder):\n",
+    "    os.mkdir(results_folder)\n",
+    "\n",
+    "df = pd.read_csv(\"dataset.csv\")\n",
+    "df_to_test = df[0:500]\n",
+    "\n",
+    "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
+    "\n",
+    "fine_tune_rag(df_to_test, langchain_docs, parameters_dict, results_folder=results_folder, save_context=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "765bcaf5",
    "metadata": {},
    "source": [
@@ -548,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ae2faae7",
    "metadata": {},
    "outputs": [],
@@ -559,7 +866,7 @@
     "    \"embed_options\": { \n",
     "        \"Snowflake/snowflake-arctic-embed-l-v2.0\": \"HuggingFace_SentenceTransformers\" # ranked 6th, 568M params, released in december 2024 \n",
     "        },\n",
-    "    \"models\": [\"gpt-3.5-turbo\"]\n",
+    "    \"models\": {\"gpt-3.5-turbo\": \"openai\"}\n",
     "}\n",
     "\n",
     "results_folder = os.path.join(os.getcwd(), \"eval_results/optimize_results\")\n",
@@ -579,7 +886,7 @@
     "df = pd.read_csv(\"dataset.csv\")\n",
     "df_to_test = df[0:500]\n",
     "\n",
-    "langchain_docs = convert_context_to_langchain_docs(df)\n",
+    "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
     "\n",
     "fine_tune_rag(df_to_test, langchain_docs, parameters_dict, results_folder=results_folder, save_context=False)"
    ]
@@ -595,39 +902,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d464229",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09b1a38f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28753d85",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af03ef4f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c2a86af3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cca88e2e",
    "metadata": {},
    "outputs": [],
    "source": []
