--- a/nb_experiments.ipynb
+++ b/nb_experiments.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "957f241f-d54c-452e-94ad-cfcc8a81a836",
    "metadata": {},
    "outputs": [],
@@ -203,20 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "46d8e92a-9322-4359-b18b-f4217fb78003",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1204\n",
-      "page_content='The Normans (Norman: Nourmands; French: Normands; Latin: Normanni) were the people who in the 10th and 11th centuries gave their name to Normandy, a region in France. They were descended from Norse (\"Norman\" comes from \"Norseman\") raiders and pirates from Denmark, Iceland and Norway who, under their leader Rollo, agreed to swear fealty to King Charles III of West Francia. Through generations of assimilation and mixing with the native Frankish and Roman-Gaulish populations, their descendants would gradually merge with the Carolingian-based cultures of West Francia. The distinct cultural and ethnic identity of the Normans emerged initially in the first half of the 10th century, and it continued to evolve over the succeeding centuries.' metadata={'title': 'Normans'}\n",
-      "page_content='The Norman dynasty had a major political, cultural and military impact on medieval Europe and even the Near East. The Normans were famed for their martial spirit and eventually for their Christian piety, becoming exponents of the Catholic orthodoxy into which they assimilated. They adopted the Gallo-Romance language of the Frankish land they settled, their dialect becoming known as Norman, Normaund or Norman French, an important literary language. The Duchy of Normandy, which they formed by treaty with the French crown, was a great fief of medieval France, and under Richard I of Normandy was forged into a cohesive and formidable principality in feudal tenure. The Normans are noted both for their culture, such as their unique Romanesque architecture and musical traditions, and for their significant military accomplishments and innovations. Norman adventurers founded the Kingdom of Sicily under Roger II after conquering southern Italy on the Saracens and Byzantines, and an expedition on behalf of their duke, William the Conqueror, led to the Norman conquest of England at the Battle of Hastings in 1066. Norman cultural and military influence spread from these new European centres to the Crusader states of the Near East, where their prince Bohemond I founded the Principality of Antioch in the Levant, to Scotland and Wales in Great Britain, to Ireland, and to the coasts of north Africa and the Canary Islands.' metadata={'title': 'Normans'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(langchain_docs))\n",
     "print(langchain_docs[0])\n",
@@ -233,21 +223,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "de25a07e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(\"CustomRAG config: {'chunk_size': 400, 'chunk_overlap': 15, \"\n",
-      " \"'vector_database': 'chromadb', 'embeddings_function': {'model_name': \"\n",
-      " \"'text-embedding-3-large', 'platform': 'OpenAI'}, 'llm': {'model_name': \"\n",
-      " \"'gpt-3.5-turbo', 'client': 'OpenAI'}}\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from rag_fine_tuning import CustomRAG, prompt_message, convert_knowledge_base_to_langchain_docs\n",
     "\n",
@@ -276,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6d08f77e",
    "metadata": {},
    "outputs": [],
@@ -286,18 +265,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6e9878b4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vector store 400_text-embedding-3-large already exists. No need to initialize.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "embeddings_model = \"text-embedding-3-small\"\n",
     "embeddings = OpenAIEmbeddings(model=embeddings_model)\n",
@@ -317,35 +288,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "20c5fcd1-6677-4a48-823c-7b899bfee9fc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Querying chroma vector store\n",
-      "How is the weather today in Milan?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/rag_fine_tuning.py:263: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
-      "  db = Chroma(\n",
-      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = \"How is the weather today in Milan?\"\n",
     "relevant_docs = rag.query_vector_store(query, n_results=3, score_threshold=0.1)\n",
@@ -355,33 +301,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d473dd71",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Querying chroma vector store\n",
-      "Who were the normans?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = \"Who were the normans?\"\n",
     "relevant_docs = rag.query_vector_store(query, n_results=3, score_threshold=0.1)\n",
@@ -402,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bb0a1187",
    "metadata": {},
    "outputs": [],
@@ -413,180 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ff098d54",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vector store 400_text-embedding-3-large already exists. No need to initialize.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/5 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Querying chroma vector store\n",
-      "In what country is Normandy located?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "** Context: \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 1/5 [00:02<00:08,  2.10s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Querying chroma vector store\n",
-      "When were the Normans in Normandy?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "** Context: \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|████      | 2/5 [00:03<00:04,  1.57s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Querying chroma vector store\n",
-      "From which countries did the Norse originate?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "** Context: \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 60%|██████    | 3/5 [00:05<00:04,  2.07s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Querying chroma vector store\n",
-      "Who was the Norse leader?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "** Context: \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 80%|████████  | 4/5 [00:07<00:01,  1.80s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Querying chroma vector store\n",
-      "What century did the Normans first gain their separate identity?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No relevant docs were retrieved using the relevance score threshold 0.1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "** Context: \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:08<00:00,  1.71s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "rag.get_llm_multiple_questions_answers(df_to_test)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e11654ce",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -601,11 +358,6 @@
    "id": "273535f0",
    "metadata": {},
    "source": [
-    "Comments\n",
-    "Peak distribution for number of characters in the documents is ~600 words. \n",
-    "- smaller chunks: reduced noise from irrelevant content - works well with dense embeddings*\n",
-    "- larger chunks: preserves context better; ideal if queries require full document context, works well with hybrid search*\n",
-    "\n",
     "TEXT CHUNKING \n",
     "\n",
     "1. CHARACTER SPLITTING : divide the text into N-character sized chunks. Can split words in the middle. \n",
@@ -616,9 +368,9 @@
     "\n",
     "EMBEDDINGS \n",
     "Create fixed-length vector representation of text, focusing on semanting meaning for tasks like similarity comparison. \n",
-    "Most up to date embedding models, both proprietary and open source, with performance metrics across different tasks: https://huggingface.co/spaces/mteb/leaderboard \n",
-    "This contains also a \"retrieval\" column with performance metrics. Click on the column to sort the models.\n",
-    "Interesting article: https://www.mongodb.com/developer/products/atlas/choose-embedding-model-rag/\n"
+    "Most up to date embedding models, both proprietary and open source, with performance metrics across different tasks: https://huggingface.co/spaces/mteb/leaderboard.\n",
+    "\n",
+    "This contains also a \"retrieval\" column with performance metrics. \n"
    ]
   },
   {
@@ -626,7 +378,35 @@
    "execution_count": null,
    "id": "f0830832",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fine tuning RAG with the following parameters: \n",
+      "{'chunk_sizes': [100, 200, 400, 500, 600],\n",
+      " 'embed_options': {'text-embedding-3-large': 'OpenAI',\n",
+      "                   'text-embedding-3-small': 'OpenAI',\n",
+      "                   'text-embedding-ada-002': 'OpenAI'},\n",
+      " 'models': {'gpt-3.5-turbo': 'OpenAI', 'mistral-large-latest': 'Mistral'}}\n",
+      "Running gpt-3.5-turbo - 100 - text-embedding-3-small\n",
+      "(\"CustomRAG config: {'chunk_size': 100, 'chunk_overlap': 15, \"\n",
+      " \"'vector_database': 'chromadb', 'embeddings_function': {'model_name': \"\n",
+      " \"'text-embedding-3-small', 'platform': 'OpenAI'}, 'llm': {'model_name': \"\n",
+      " \"'gpt-3.5-turbo', 'client': 'OpenAI'}}\")\n",
+      "Vector store 100_text-embedding-3-small already exists. No need to initialize.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/500 [00:00<?, ?it/s]/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/rag_fine_tuning.py:263: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
+      "  db = Chroma(\n",
+      " 20%|█▉        | 99/500 [01:25<06:16,  1.06it/s]"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"dataset.csv\")\n",
     "df_to_test = df[0:500]\n",
@@ -635,7 +415,7 @@
     "\n",
     "fine_tune_rag(df_to_test, \n",
     "              langchain_docs, \n",
-    "              results_fodler=\"eval_results/test_new_class\", \n",
+    "              results_folder=\"eval_results/test_new_class\", \n",
     "              vector_db_folder=\"vector_databases/test_new_class\",)"
    ]
   },
@@ -660,14 +440,6 @@
    "source": [
     "df_all_res"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9835179f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -702,43 +474,6 @@
     "best_result_path = \"/\".join(split_path)\n",
     "best_result_path"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e460bb44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# run the RAG with best parameters, and save also the context\n",
-    "parameters_dict = {\n",
-    "    \"chunk_sizes\": [400],\n",
-    "    \"embed_options\": { \n",
-    "        \"text-embedding-3-large\": \"OpenAI\", \n",
-    "        },\n",
-    "    \"models\": {\"gpt-3.5-turbo\": \"openai\"}\n",
-    "}\n",
-    "results_folder = os.path.join(os.getcwd(), \"eval_results/debugging_eval_results\")\n",
-    "results_folder\n",
-    "\n",
-    "if not os.path.exists(results_folder):\n",
-    "    os.mkdir(results_folder)\n",
-    "\n",
-    "df = pd.read_csv(\"dataset.csv\")\n",
-    "df_to_test = df[0:500]\n",
-    "\n",
-    "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
-    "\n",
-    "fine_tune_rag(df_to_test, langchain_docs, parameters_dict, results_folder=results_folder, save_context=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "979903fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -831,8 +566,9 @@
     "        },\n",
     "    \"models\": {\"mistral-large-latest\": \"mistral\"}\n",
     "}\n",
+    "\n",
     "results_folder = os.path.join(os.getcwd(), \"eval_results/optimize_results\")\n",
-    "results_folder\n",
+    "vector_db_folder = os.path.join(os.getcwd(), \"vector_dabases/optimize_results\")\n",
     "\n",
     "if not os.path.exists(results_folder):\n",
     "    os.mkdir(results_folder)\n",
@@ -842,7 +578,11 @@
     "\n",
     "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
     "\n",
-    "fine_tune_rag(df_to_test, langchain_docs, parameters_dict, results_folder=results_folder, save_context=True)"
+    "fine_tune_rag(df_to_test, \n",
+    "              langchain_docs, \n",
+    "              parameters_dict,\n",
+    "              results_fodler=results_folder, \n",
+    "              vector_db_folder=vector_db_folder)"
    ]
   },
   {
@@ -870,50 +610,22 @@
     "}\n",
     "\n",
     "results_folder = os.path.join(os.getcwd(), \"eval_results/optimize_results\")\n",
-    "results_folder\n",
+    "vector_db_folder = os.path.join(os.getcwd(), \"vector_dabases/optimize_results\")\n",
     "\n",
     "if not os.path.exists(results_folder):\n",
-    "    os.mkdir(results_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "075d4319",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    os.mkdir(results_folder)\n",
+    "\n",
     "df = pd.read_csv(\"dataset.csv\")\n",
     "df_to_test = df[0:500]\n",
     "\n",
     "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
     "\n",
-    "fine_tune_rag(df_to_test, langchain_docs, parameters_dict, results_folder=results_folder, save_context=False)"
+    "fine_tune_rag(df_to_test, \n",
+    "              langchain_docs, \n",
+    "              parameters_dict,\n",
+    "              results_fodler=results_folder, \n",
+    "              vector_db_folder=vector_db_folder)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b009a96f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2a86af3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cca88e2e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
